welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:0: error: not found: value set
class ZigZag extends SimpleBuggle {set ( 5 , 6) 
                                   ^