welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
set ( 5 , 6)